# 2018Fall-Smart-Guidance-Helmet

./: README.md
eye-direction-UI/: .gitignore  coordinate.txt  eyedirection2  eyedirection2.pro  main.cpp  moc_widget.cpp  widget.cpp  widget.h
gaze-tracking/: .gitignore  CMakeLists.txt
gaze-tracking/main/: CMakeLists.txt  eye_cameras.cpp  eye_cameras.h  eye_model_updater.cpp  eye_model_updater.h  main.cpp  pupilFitter.h  ubitrack_util.h
gaze-tracking/singleeyefitter/singleeyefitter/: Ellipse.h  intersect.h
